# meetup_bot

./: .all-contributorsrc  .dockerignore  .env.example  .gitignore  .hadolint.yaml  .markdownlint.jsonc  .pre-commit-config.yaml  .tool-versions  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.distroless  Dockerfile.prod  Dockerfile.web  Makefile  Procfile  README.md  TODO.md  Tiltfile  access_token.py  capture_groups.py  channels.csv  devbox.json  docker-bake.hcl  docker-compose.yml  gen_token.py  gen_url.py  gitleaks.toml  gql_test.py  heroku.yml  heroku.yml   justfile  main.py  meetup.py  meetup_queries.gql  meetup_query.py  oauth_jwt.py  package-lock.json  (+12 more)
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml  infosec.yml  main.yml  pytest.yml  release-please.yml  smoke-test.yml
.github/workflows/hooks/: pre-commit.py
app/: .dockerignore  .env.example  Dockerfile  Dockerfile.web  Procfile  capture_groups.py  channels.csv  config.py  groups.csv  heroku.yml  justfile  kubernetes.yml  main.py  meetup_query.py  pyproject.toml  requirements.txt  schedule.py  scheduler.py  scheduler.sh  sign_jwt.py  slackbot.py  startup.sh
app/core/: auth.py  db.py  meetup_query.py  slackbot.py
app/resources/: MESSAGE.md
app/tests/: test_meetup_query.py  test_meetup_query_copilot.py  test_sign_jwt.py
app/tests/fixtures/: formatted.json
app/tests/js_tests/: package-lock.json  package.json
app/utils/: capture_groups.py  schedule.py
js_tests/: package-lock.json  package.json  postman_prereq.js  test.js
jsonwebtoken_test/: package-lock.json  package.json  test.js
raw/: .gitkeep  groups.csv
resources/templates/: login.html
taskfiles/: docker.yml  heroku.yml  uv.yml
tasks/: docker.yml  heroku.yml
tests/: conftest.py  test_main.py  test_meetup_query.py  test_schedule.py  test_sign_jwt.py  test_slackbot.py  test_smoke.py
tests/fixtures/: output.json  raw.json
