[project]
name = "meetup_bot"
version = "1.1.2"
description = "Use Meetup Pro API to send Slack messages before events occur."
authors = [
    { name = "pythoninthegrass", email = "4097471+pythoninthegrass@users.noreply.github.com" }
]
readme = "README.md"
license = "Unlicense"

requires-python = ">=3.11,<3.13"

dependencies = [
    "arrow>=1.3.0,<2",
    "bcrypt==4.0.1",
    "colorama>=0.4.5,<0.5",
    "exceptiongroup>=1.2.2,<2",
    "fastapi>=0.115.6",
    "gunicorn>=23.0.0,<24",
    "icecream>=2.1.3,<3",
    "Jinja2>=3.1.5,<4",
    "jose>=1.0.0,<2",
    "numpy>=2.2.1,<3",
    "pandas>=2.2.3,<3",
    "passlib[bcrypt]>=1.7.4,<2",
    "pony>=0.7.16,<0.8",
    "psycopg2-binary>=2.9.10,<3",
    "PyJWT[crypto]>=2.10.1,<3",
    "python-decouple~=3.8",
    "python-jose[cryptography]>=3.3.0,<4",
    "python-multipart>=0.0.9,<0.0.10",
    "requests>=2.32.3,<3",
    "requests-cache>=1.2.1,<2",
    "slack-sdk>=3.34.0,<4",
    "uvicorn>=0.29.0,<0.30",
    "wheel>=0.43.0,<0.44",
]

[dependency-groups]
dev = [
    "ipython>=8.31.0,<9",
    "playwright>=1.49.1,<2",
    "poetry-plugin-export>=1.8.0,<2",
    "poetry-plugin-up>=0.7.1,<0.8",
    "pyclean>=3.0.0,<4",
    "rich>=13.9.4,<14",
    "ruff>=0.6.5,<0.7",
]
test = [
    "pytest>=8.3.4,<9",
    "pytest-asyncio>=0.24.0,<0.25",
    "pytest-cov>=5.0.0,<6",
    "pytest-datafiles>=3.0.0,<4",
    "pytest-xdist>=3.6.1,<4",
    "requests-mock>=1.12.1,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "test",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Black (default: 88)
line-length = 130

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []
# Skip unused variable rules
extend-ignore = ["D203", "E203", "E251", "E266", "E401", "E402", "E501", "F401", "F403", "F405"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    "dist",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    "__pycache__",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "qa: marks tests as qa (deselect with '-m \"not qa\"')",
]
testpaths = ["tests"]
